# attercop

./: CHANGES.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint-and-test.yaml  publish.yaml
attercop/: attercop.py
src/attercop/: attercop.py
tests/: test_args.py  test_command_flags.py  test_evaluate_prompt.py
