[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "attercop"
version = "0.1.1"
authors = [
    {name = "Mark Snidal", email = "mark.snidal@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">3.10"
dependencies = [
    "openai~=0.26.0"
]

[project.optional-dependencies]
lint = [
    "black~=22.12.0"
]

[project.scripts]
attercop = "attercop.attercop:create_prompt"